fixed alignment of figcaption

--- a/styles.css
+++ b/styles.css
@@ -51,6 +51,7 @@ p {
 figcaption {
 
   margin-bottom: 50px;
+  margine:15px;
 }
 
 h4 {
